--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This package contains a library for the robust approach to statistics. It is based on Weighted Likelihood approach.
 
-On the actual version 0.4 (see STATUS file) the package contains function for robust estimation of normal location and scale in univariate and multivariate model, shape and scale in gamma model, p in binomial model, lambda in poisson model, linear regression with one step estimation, robust model selection criterion based on Mallows Cp, AIC, Cross-validation, Stepwise, Backward and Forward, t-test and variance test.
+On the actual version 0.5 (see STATUS file) the package contains function for robust estimation of normal location and scale in univariate and multivariate model, shape and scale in gamma model, p in binomial model, lambda in poisson model, linear regression with one step estimation, robust model selection criterion based on Mallows Cp, AIC, Cross-validation, Stepwise, Backward and Forward, t-test and variance test.
 
 I have installed and run successfully the package under this system:
 
@@ -8,7 +8,7 @@ Hardware: PC with AMD K6 and 64M ram
 OS: Linux with kernel 2.0.36 (and version 2.2.14-15mdk release)
 Fortran compiler: g77 - GNU project Fortran Compiler (v0.5.21 and v0.5.25)
 C++ compiler: gcc, g++ - GNU project C and C++ Compiler (v2.7 and v2.95.2)
-R: version and 1.2.0
+R: version 1.2.3 and version 1.3.0 (2001-05-17)
 
 To install the package, use the command R CMD INSTALL wle.
 
