--- a/README
+++ b/README
@@ -2,14 +2,14 @@ This is under development version 0.7
 
 This package contains a library for the robust approach to statistics. It is based on Weighted Likelihood approach.
 
-On the actual version 0.7 (see STATUS file) the package contains function for robust estimation of normal location and scale in univariate and multivariate model, shape and scale in gamma model, p in binomial model, lambda in poisson model, linear regression and one step estimation, robust model selection criterion based on Mallows Cp, AIC, Cross-validation, Stepwise, Backward and Forward, t-test and variance test. There is also experimental code for univariate normal mixture models and for seasonal autoregressive models.
+On the actual version 0.7-2 (see STATUS file) the package contains function for robust estimation of normal location and scale in univariate and multivariate model, shape and scale in gamma model, p in binomial model, lambda in poisson model, linear regression and one step estimation, robust model selection criterion based on Mallows Cp, AIC, Cross-validation, Stepwise, Backward and Forward, t-test and variance test. There is also experimental code for univariate normal mixture models, seasonal autoregressive models and for fractional models (only estimation of the fractional parameter).
 
 I have installed and run successfully the package under this system:
 
-OS: Linux Suse 7.1 on AMD686
+OS: Linux Mandrake 8.1 on AMD Atholon
 Fortran compiler: GNU project Fortran Compiler (v0.5.24)
-C compiler: GNU project C and C++ Compiler (gcc-2.95)
-R: version 1.4.0 (2001-12-19)
+C compiler: GNU project C and C++ Compiler (gcc-2.96)
+R: version 1.5.0 (2002-03-25) under development
 
 To install the package, use the command R CMD INSTALL wle.
 
