--- a/README
+++ b/README
@@ -1,6 +1,11 @@
 This package contains a library for the robust approach to statistics. It is based on Weighted Likelihood approach.
 
-On the actual version 0.8-1 (see STATUS file) the package contains function for robust estimation of normal location and scale in univariate and multivariate model, shape and scale in gamma model, p in binomial model, lambda in poisson model, linear regression and one step estimation, robust model selection criterion based on Mallows Cp, AIC, Cross-validation, Stepwise, Backward and Forward, t-test and variance test. Robust estimation of circular data is possibile for von Mises and Wrapped Normal distribution. There is also experimental code for univariate normal mixture models, seasonal autoregressive models (weighted AIC for autoregressive models) and for fractional models (only estimation of the fractional parameter).
+On the actual version 0.9 (see STATUS file) the package contains function for robust estimation of normal location and scale in univariate and multivariate model, shape and scale in gamma model, p in binomial model, lambda in poisson model, linear regression and one step estimation, robust model selection criterion based on Mallows Cp, AIC, Cross-validation, Stepwise, Backward and Forward, t-test and variance test. Robust estimation of circular data is possibile for von Mises and Wrapped Normal distribution. There is also experimental code for univariate normal mixture models, seasonal autoregressive models (weighted AIC for autoregressive models) and for fractional models (only estimation of the fractional parameter).
+
+This version is tested under
+gcc version 3.3.4 (Debian 1:3.3.4-6sarge1)
+and
+gcc version 4.0.0 20050410 (prerelease) (Debian 4.0-0pre10)
 
 To install the package, use the command R CMD INSTALL wle.
 
