--- a/README
+++ b/README
@@ -4,6 +4,7 @@ On the actual version 0.9-2 (see STATUS file) the package contains function for 
 
 This version is tested under
 gcc version 3.3.5 (Debian 1:3.3.5-13)
+gcc version 4.0.0 20041026 (Apple Computer, Inc. build 4061)
 
 To install the package, use the command R CMD INSTALL wle.
 
